syntax = "proto2";
package tzrec.protos;

import "google/protobuf/struct.proto";
import "tzrec/protos/module.proto";
import "tzrec/protos/seq_encoder.proto";

message TorchLayer {
    required string class_name = 1;
    oneof params {
        google.protobuf.Struct st_params = 2;
        FM fm = 10;
        MLP mlp = 11;
        DINEncoder din = 12;
        MMoEModule mmoe = 14;
        Cross cross = 15;
        CrossV2 cross_v2 = 16;
        // DCNv2Net dcnv2_net = 17;
        MaskNetModule mask_net_module = 18;
        MaskBlock mask_block = 19;
    }
}
